--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,24 @@
   color: #fff;
 }
 
+#vd_grid{
+  flex-grow:1;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: var(--main-dark);
+}
+
+.video{
+  height: 300px;
+  width: 400px;
+  margin:0.5rem;
+  object-fit: cover;
+  transform:rotateY(180deg);
+  -webkit-transform:rotateY(180deg);
+  -moz-transform:rotateY(180deg)
+}
 @media (max-width: 700px) {
   #show_chat {
     display: flex;
