--- a/public/style.css
+++ b/public/style.css
@@ -115,6 +115,10 @@
   -webkit-transform:rotateY(180deg);
   -moz-transform:rotateY(180deg)
 }
+.bgred{
+  background-color: red;
+}
+
 @media (max-width: 700px) {
   #show_chat {
     display: flex;
